--- a/Assets/Plugins/UniTask/Editor/UniTask.Editor.asmdef
+++ b/Assets/Plugins/UniTask/Editor/UniTask.Editor.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "UniTask.Editor",
+    "rootNamespace": "",
     "references": [
-        "UniTask"
+        "UniTask",
+        "UniTask.DOTween"
     ],
     "includePlatforms": [
         "Editor"
